refactor(spring-boot-4): refactored code to work woth spring boot 4